--- a/Social-connect/index.html
+++ b/Social-connect/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UIU Social Network</title>
+    <meta name="description" content="Connect, share, and build your network on unip" />
+    <title>unip - Connect & Share</title>
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <!-- Google Fonts --> 
